# phonetic-alphabet-practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
phoneticAlphabet/: main.cpp
